--- a/templates/index.html
+++ b/templates/index.html
@@ -36,7 +36,7 @@
             <div class="auth-links">
                 {% if user.is_authenticated %}
                     <a href="/user/profile">Profile</a>
-                    <a href="/logout">Logout</a>
+                    <a href="/logout/">Logout</a>
                 {% else %}
                     <a href="/login/">Login</a>
                     <a href="/register/">Register</a>
