--- a/templates/index.html
+++ b/templates/index.html
@@ -35,7 +35,7 @@
             </form>
             <div class="auth-links">
                 {% if user.is_authenticated %}
-                    <a href="/user/profile">Profile</a>
+                    <a href="/profile">Profile</a>
                     <a href="/logout">Logout</a>
                 {% else %}
                     <a href="/login/">Login</a>
